Project page button fix
Top project button was overlapped by tab system. Blocking it from being pressed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -216,6 +216,7 @@ input.projects{
 	position: absolute;
 	font-size: 18pt;
 	left:0;
+	z-index: 3;
 }
 
 input.projects:focus{
